fixed white-space and alignemnt of the price and add to cart buttons

--- a/style.css
+++ b/style.css
@@ -31,9 +31,12 @@ body {
   margin: 0 auto;
 }
 
-header,
+header {
+  margin-bottom: 128px;
+}
+
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
@@ -70,8 +73,9 @@ h2 {
   padding: 16px 32px;
 }
 
-.btn--small {
-  font-size: 14px;
+.btn--small:link,
+.btn--small:visited {
+  font-size: 12px;
   padding: 8px 12px;
 }
 
@@ -88,7 +92,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 64px;
 }
 
 .header-text-box {
@@ -96,7 +100,7 @@ header {
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
@@ -117,7 +121,7 @@ img {
   stroke: #087f5b;
   width: 32px;
   height: 32px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .features-title {
@@ -153,6 +157,11 @@ img {
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.7;
+  color: #e6fcf5;
+}
+
+.testimonial-author {
+  color: #c3fae8;
 }
 
 /* CHAIRS */
@@ -167,7 +176,7 @@ img {
 }
 
 .chair-box {
-  padding: 24px;
+  padding: 32px;
 }
 
 h3 {
@@ -177,7 +186,7 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .chair-details li {
@@ -201,6 +210,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   font-size: 20px;
+  align-items: center;
 }
 
 footer {
